[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Player/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Entities/Enemies/MonkeyTest.gd" type="Script" id=2]
[ext_resource path="res://Models/pirategun.dae" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Muzzle.gd" type="Script" id=4]
[ext_resource path="res://Models/Player/Weapon/Fire/fire1.png" type="Texture" id=5]
[ext_resource path="res://Models/Player/Weapon/Fire/fire2.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Player/WeaponController.gd" type="Script" id=7]
[ext_resource path="res://Models/Sprites/Crosshair/crosshair.png" type="Texture" id=8]

[sub_resource type="CapsuleShape" id=1]
height = 0.002

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.336309, 1, 1 )

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "fire"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "reload"

[sub_resource type="AnimationNodeStateMachineTransition" id=6]

[sub_resource type="AnimationNodeStateMachineTransition" id=7]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=9]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=10]
states/fire/node = SubResource( 3 )
states/fire/position = Vector2( 696, 168 )
states/idle/node = SubResource( 4 )
states/idle/position = Vector2( 503, 168 )
states/reload/node = SubResource( 5 )
states/reload/position = Vector2( 503, 338 )
transitions = [ "idle", "fire", SubResource( 6 ), "fire", "idle", SubResource( 7 ), "idle", "reload", SubResource( 8 ), "reload", "idle", SubResource( 9 ) ]
graph_offset = Vector2( -68, 54 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=11]

[sub_resource type="Animation" id=12]
length = 0.12
loop = true
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("RotationHelper/AnimationHelper/Rifle:translation:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -0.0273776, -0.25, 0, 0.25, 0, -0.0149555, -0.25, 0, 0.25, 0, 0.00936413, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.12 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("RotationHelper/AnimationHelper/Rifle:rotation_degrees:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -1.43972, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.12 )
}
tracks/2/type = "method"
tracks/2/path = NodePath("AnimationTree")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire_bullet"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("RotationHelper/AnimationHelper/Rifle/Muzzle")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show_and_rotate"
} ]
}

[sub_resource type="Animation" id=13]
loop = true
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("RotationHelper/AnimationHelper/Rifle:translation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.81622, -0.25, 0, 0.25, 0, 1.80741, -0.25, 0, 0.25, 0, 1.81602, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.503118, 1 )
}

[sub_resource type="Animation" id=14]
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("RotationHelper/AnimationHelper/Rifle:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.00149606, 0, 0 ), Vector3( 10.2694, -0.416164, 9.22897 ), Vector3( 11.7108, -8.13757e-07, 21.0463 ), Vector3( -0.00149606, 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationTree")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.95 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finish_reload"
} ]
}

[node name="PlayerCharacter" type="KinematicBody"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00405693, 0.0412759, -0.00859356 )
collision_layer = 0
script = ExtResource( 1 )

[node name="BodyCollider" type="CollisionShape" parent="."]
transform = Transform( 0.819844, 0, 0, 0, 1.2, 0, 0, 0, 0.424961, 0, 1.185, 0.0560107 )
shape = SubResource( 1 )

[node name="FeetCollider" type="CollisionShape" parent="."]
transform = Transform( 1.41271, 0, 0, 0, 0.0704462, 0, 0, 0, 0.465509, 0, 0.3, -0.392 )
shape = SubResource( 2 )
disabled = true

[node name="RotationHelper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Camera" type="Camera" parent="RotationHelper"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.0411232, -0.523437 )
fov = 75.0
near = 0.07
far = 200.0
script = ExtResource( 2 )

[node name="FirePoint" type="Spatial" parent="RotationHelper/Camera"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="FireRay" type="RayCast" parent="RotationHelper/Camera/FirePoint"]
enabled = true
cast_to = Vector3( 0, 0, 1500 )
collision_mask = 5
collide_with_areas = true

[node name="AnimationHelper" type="Spatial" parent="RotationHelper"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )

[node name="Rifle" parent="RotationHelper/AnimationHelper" instance=ExtResource( 3 )]
transform = Transform( 0.999994, 0, 0, 0, 0.999359, 0, 0, 0, 0.800621, -0.47249, 1.81536, 0.00936413 )

[node name="Muzzle" type="Spatial" parent="RotationHelper/AnimationHelper/Rifle"]
transform = Transform( 0.818154, -0.230433, 0, 0.23061, 0.818135, 0, 0, 0, 0.85, 0, 0, 0.662078 )
script = ExtResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="RotationHelper/AnimationHelper/Rifle/Muzzle"]
transform = Transform( -6.3926e-06, -6.28527e-05, 0.3, 0.3, -0.00024252, 6.34789e-06, 0.000242519, 0.3, 6.28579e-05, 2.98023e-08, -2.38419e-07, 0.0419673 )
texture = ExtResource( 5 )

[node name="Sprite3D2" type="Sprite3D" parent="RotationHelper/AnimationHelper/Rifle/Muzzle"]
transform = Transform( 0.3, 0, 0, 0, -1.62053e-08, -0.244029, 0, 0.370734, -1.06668e-08, 5.96046e-08, 1.19209e-07, 0.0419673 )
texture = ExtResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 10 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 11 )
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fire = SubResource( 12 )
anims/idle = SubResource( 13 )
anims/reload = SubResource( 14 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.1189
margin_bottom = -1.1189

[node name="TextureRect" type="TextureRect" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 8 )
stretch_mode = 6

[node name="AmmoBar" type="Panel" parent="HUD"]
margin_left = 1571.0
margin_top = 999.0
margin_right = 1919.0
margin_bottom = 1080.0

[node name="AmmoText" type="Label" parent="HUD/AmmoBar"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -348.0
margin_top = -81.0
text = "safsafasf"
align = 1
valign = 1
